added spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3360/scoutpro_malawi
+spring.datasource.url=jdbc:mysql://localhost:3306/scoutpro_malawi
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
@@ -8,6 +8,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.main.banner-mode=off
 
 # Remove unecessary log
-logging.level.root=warn
+# logging.level.root=warn
 
 
