--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<spring-security.version>6.2.2</spring-security.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -30,6 +31,10 @@
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId> <!-- Add this line for Spring Security -->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
