--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3360/scoutpro_malawi
+spring.datasource.url=jdbc:mysql://localhost:3306/scoutpro_malawi
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+
 
 # Turn off SpringBoot banner
 spring.main.banner-mode=off
